Fixed gradient distortion at bottom of page

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 html {
-	height: 100%;
 }
 
 body {
@@ -13,7 +12,9 @@ body {
 	font-family: 'Poppins';
 	background: linear-gradient(107.76deg, #3b4042 0%, #1b5fd4 99.07%);
 	background-size: cover;
-	height: 100%;
+	min-height: 100vh;
+	margin: 0;
+	padding: 0;
 }
 
 .custom-radius {
